# puzzle-adaptive

./: .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/src/: main.cpp
backend/src/adapter/: Adapter.cpp  Adapter.h
backend/src/database/: Database.cpp  Database.h
backend/src/game/: Game.cpp  Game.h  Puzzle.cpp  Puzzle.h
backend/src/server/: Server.cpp  Server.h
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
tests/: CMakeLists.txt
