cmake_minimum_required(VERSION 3.16)

# Включаем тестирование
enable_testing()

# Добавляем тесты (пока пустые, создадим позже)
# add_executable(test_game test_game.cpp)
# target_link_libraries(test_game PRIVATE puzzle_server)
# add_test(NAME GameTests COMMAND test_game)

message(STATUS "Tests directory configured")